--- a/app/globals.css
+++ b/app/globals.css
@@ -126,6 +126,12 @@ body {
     box-sizing: border-box !important;
     max-width: 100% !important;
   }
+  .mobile\:text-2xl { font-size: 1.5rem !important; line-height: 2rem !important; }
+  .mobile\:mb-1 { margin-bottom: 0.25rem !important; }
+  .mobile\:block { display: block !important; }
+  .mobile\:hidden { display: none !important; }
+  .mobile\:h-32 { height: 8rem !important; }
+  .mobile\:w-32 { width: 8rem !important; }
 }
 
 @media (min-width: 601px) {
